# Aimmy-Setup

./: Cargo.toml
src/: main.rs
