[package]
name = "aimmy_setup"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
sha256 = "1.6.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell"] }
zip = "4.3.0"
